# bisinet

./: README.md
python-obfuscate-code/: README.md  pyproject.toml
python-obfuscate-code/python_obfuscate_code/: oxyry-obfuscated-code.py  pyobfuscate-code.py  sample-code.py
